--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.fizzbuzz</groupId>
-  <artifactId>fizbuzz2</artifactId>
+  <artifactId>fizzbuzz2</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>fizzbuzz2</name>
